welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: '<-' expected but '=>' found.
	for (x=>0 to 2){
              ^MethodsDogHouse:8: error: illegal start of simple expression
}
^