welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
	var x=0
	for (x=>0 to 2){
	avance(2)
	gauche
	}
}
